# email-triage-env

./: .gitignore  Dockerfile  README.md  app.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate_logic.py
data/: emails.py
server/: app.py
tasks/: graders.py
tests/: test_env.py
