[project]
name = "email-triage-env"
version = "1.0.0"
description = "Real-world email triage environment following the OpenEnv spec"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "openai>=1.20.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.urls]
Homepage = "https://huggingface.co/spaces/pranpali/email-triage-v1"
Repository = "https://github.com/PranPali/email-triage-env"
